--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "jszip": "^3.10.1",
     "lottie-react": "^2.4.1",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sharp": "^0.34.2"
+    "react-icons": "^5.5.0",
+    "sharp": "^0.34.2",
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
